--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <title>Mind Sweeper</title>
 <script src="jquery-2.2.0.min.js"></script>
 <script src="jquery.mobile.custom.min.js"></script>
-<script src="mindsweeper.js"></script>
+<script src="mindsweeper.js?v=1.0.1"></script>
 <script src="buttonPopup.js"></script>
-<script src="main.js"></script>
+<script src="main.js?v=1.0.1"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link rel="stylesheet" href="standard.css">
-<link rel="stylesheet" href="mobile.css" media="screen and (orientation: portrait)">
+<link rel="stylesheet" href="standard.css?v=1.0.1">
+<link rel="stylesheet" href="mobile.css?v=1.0.1" media="screen and (orientation: portrait)">
 </head>
 <body>
 	<div class="h1">MindSweeper <i class="far fa-question-circle"></i></div>
