--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> 
 <title>Mind Sweeper</title>
 <script src="jquery-2.2.0.min.js"></script>
-<script src="jquery.mobile.custom.min.js"></script>
 <script src="mindsweeper.js?v=1.0.1"></script>
 <script src="buttonPopup.js"></script>
-<script src="main.js?v=1.0.1"></script>
+<script src="main.js?v=1.0.2"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link rel="stylesheet" href="standard.css?v=1.0.2">
-<link rel="stylesheet" href="mobile.css?v=1.0.1" media="screen and (orientation: portrait)">
+<link rel="stylesheet" href="standard.css?v=1.0.3">
+<link rel="stylesheet" href="mobile.css?v=1.0.2" media="screen and (orientation: portrait)">
 </head>
 <body>
 	<div class="h1">MindSweeper <i class="far fa-question-circle"></i></div>
 	<div id="board">
 	</div>
 	<div id="instructions">
+		<div class="close">X</div>
 		In MindSweeper you play the part of a zombie looking for brains
 		while avoiding hunters with shotguns. Each revealed square has clues:
 		the numbers in red indicate how many hunters with shotguns are
